test/Fail/Issue1408b.err
/data/work/functional-programming/agda/test/Fail/Issue1408b.agda:20.12-14: error: [UnsolvedConstraints]
Failed to solve the following constraints:
  Is empty: y ≅ x (stuck)
      [ at /data/work/functional-programming/agda/test/Fail/Issue1408b.agda:20.12-14 ]
